// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI --stdin-filepath works with --config-precedence cli-override 1`] = `
=================================== (stdout) ===================================
let x: keyof Y = foo<typeof X>()

=================================== (write) ====================================
[]
`;

exports[`CLI --stdin-filepath works with --config-precedence file-override 1`] = `
=================================== (stdout) ===================================
let x: keyof Y = foo<typeof X>();

=================================== (write) ====================================
[]
`;

exports[`CLI --stdin-filepath works with --config-precedence prefer-file 1`] = `
=================================== (stdout) ===================================
let x: keyof Y = foo<typeof X>();

=================================== (write) ====================================
[]
`;

exports[`CLI overrides are still applied when no config is found with --config-precedence file-override 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
function noConfigJs() {
  console.log("no-config/file.js should have no semicolons");
}

=================================== (write) ====================================
[]
`;

exports[`CLI overrides gets applied when no config exists with --config-precedence prefer-file 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
function noConfigJs() {
  console.log("no-config/file.js should have no semicolons");
}

=================================== (write) ====================================
[]
`;

exports[`CLI overrides gets ignored when config exists with --config-precedence prefer-file 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
function js() {
  console.log("js/file.js should have tab width 8 (1 if CLI)");
}
"use strict";

module.exports = {
  endOfLine: "auto",
  tabWidth: 8,
};

=================================== (write) ====================================
[]
`;

exports[`CLI overrides take lower precedence with --config-precedence file-override 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
function js() {
  console.log("js/file.js should have tab width 8 (1 if CLI)");
}
"use strict";

module.exports = {
  endOfLine: "auto",
  tabWidth: 8,
};

=================================== (write) ====================================
[]
`;

exports[`CLI overrides take precedence with --config-precedence cli-override 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
function f() {
  console.log("should have tab width 8");
}
function f() {
  console.log("should have space width 2");
}
function f() {
  console.log("should have space width 8");
}
function f() {
  console.log(
    "should have space width 2 despite ../.editorconfig specifying 8, because ./.hg is present"
  );
}
console.log("should have no semi");
console.log("jest/__best-tests__/.file.js should have semi");
console.log("jest/__best-tests__/file.js should have semi");
console.log("jest/Component.js should not have semi");
console.log("jest/Component.test.js should have semi");
function js() {
  console.log("js/file.js should have tab width 8 (1 if CLI)");
}
"use strict";

module.exports = {
  endOfLine: "auto",
  tabWidth: 8,
};
function noConfigJs() {
  console.log("no-config/file.js should have no semicolons");
}
function packageJs() {
  console.log("package/file.js should have tab width 3");
}
function rcJson() {
  console.log.apply(null, [
    "rc-json/file.js",
    "should have trailing comma",
    "and single quotes",
  ]);
}
function rcToml() {
  console.log.apply(null, [
    "rc-toml/file.js",
    "should have trailing comma",
    "and single quotes",
  ]);
}
function rcYaml() {
  console.log.apply(null, [
    "rc-yaml/file.js",
    "should have trailing comma",
    "and single quotes",
  ]);
}

=================================== (write) ====================================
[]
`;

exports[`CLI overrides take precedence without --config-precedence 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
function f() {
  console.log("should have tab width 8");
}
function f() {
  console.log("should have space width 2");
}
function f() {
  console.log("should have space width 8");
}
function f() {
  console.log(
    "should have space width 2 despite ../.editorconfig specifying 8, because ./.hg is present"
  );
}
console.log("should have no semi");
console.log("jest/__best-tests__/.file.js should have semi");
console.log("jest/__best-tests__/file.js should have semi");
console.log("jest/Component.js should not have semi");
console.log("jest/Component.test.js should have semi");
function js() {
  console.log("js/file.js should have tab width 8 (1 if CLI)");
}
"use strict";

module.exports = {
  endOfLine: "auto",
  tabWidth: 8,
};
function noConfigJs() {
  console.log("no-config/file.js should have no semicolons");
}
function packageJs() {
  console.log("package/file.js should have tab width 3");
}
function rcJson() {
  console.log.apply(null, [
    "rc-json/file.js",
    "should have trailing comma",
    "and single quotes",
  ]);
}
function rcToml() {
  console.log.apply(null, [
    "rc-toml/file.js",
    "should have trailing comma",
    "and single quotes",
  ]);
}
function rcYaml() {
  console.log.apply(null, [
    "rc-yaml/file.js",
    "should have trailing comma",
    "and single quotes",
  ]);
}

=================================== (write) ====================================
[]
`;

exports[`CLI validate options with --config-precedence cli-override 1`] = `
=================================== (stderr) ===================================
[error] Invalid printWidth value. Expected an integer, but received 0.5.

=================================== (stdout) ===================================

=================================== (write) ====================================
[]
`;

exports[`CLI validate options with --config-precedence file-override 1`] = `
=================================== (stderr) ===================================
[error] Invalid printWidth value. Expected an integer, but received 0.5.

=================================== (stdout) ===================================

=================================== (write) ====================================
[]
`;

exports[`CLI validate options with --config-precedence prefer-file 1`] = `
=================================== (stderr) ===================================
[error] Invalid printWidth value. Expected an integer, but received 0.5.

=================================== (stdout) ===================================

=================================== (write) ====================================
[]
`;
